# PraxiApp

./: .env  .env.example  .gitattributes  .gitignore  .vercelignore  API_FIXES.md  AUTOCOMPLETE_DEBUG.md  AUTOCOMPLETE_FOCUS_FIX.md  AUTOCOMPLETE_PATIENT_ROOM_FIX.md  BUTTON_FIX.md  CSRF_TOKEN_FIX.md  DEBUG_PATIENTENLISTE_FIXES.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  Dockerfile  FULLCALENDAR_LOAD_FIX.md  KALENDER_IMPLEMENTIERUNG.md  LICENSE  PATIENT_ROOM_AUTOCOMPLETE_FIX.md  PROJEKTANALYSE.md  PROJEKT_ERKLAERUNG.md  PRUEFUNG_ERGEBNISSE.md  PowerShell‑Installer install.ps1  README.md  SERVER_STATUS.md  TESTVORBEREITUNG_VOLLSTAENDIG.md  TESTZUSAMMENFASSUNG.md  TEST_QUICKSTART.md  UI_IMPLEMENTIERUNG_ABSCHLUSS.md  UI_MODERNISIERUNG_ABGESCHLOSSEN.md  UI_MODERNISIERUNG_ZUSAMMENFASSUNG.md  UI_QA_FEINSCHLIFF_ZUSAMMENFASSUNG.md  URL_MIGRATION_COMPLETE.md  VERCEL_CHECKLIST.md  VERCEL_DEPLOYMENT.md  api-client.ts  build_files.sh  check_vercel_readiness.py  deploy.ps1  deploy.sh  (+15 more)
.github/: copilot-instructions.md
PraxisSoftware/: manage.py  requirements.txt
api/: process-logs.ts
automation/: issues.json  project-import.yml
backend/: requirements.txt
django/: requirements.txt
docs/: AGENT-ENGINE-FAULT-SCENARIO-ANALYSIS.md  AGENT-ENGINE-GAP-ANALYSIS.md  AGENT-ENGINE-IMPROVEMENT-PROPOSAL.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  C4.md  FIX-SCENARIO-SPECIFICATION.md  ONBOARDING.md  github-actions-workflow-name-path-bug.md  postgresql_only_checklist.md  stabilization-epics.md
praxi_backend/: MIGRATION_PLAN.md  celery.py  db_router.py  settings.py  (+5 more)
(+538 files in other folders)
